[tool.poetry]
name = "fast-xid"
version = "0.1.0"
description = ""
authors = ["Chongchen Chen <chenkovsky@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
rsatomic = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
